...
          child: Padding(
            padding: const EdgeInsetsDirectional.symmetric(horizontal: 24),
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                Image.asset(
                  key: const Key('imgWaduh'),
                  'assets/img/waduh.png',
                  height: 300,
                ),
                const SizedBox(height: 24),

                const Text(
...
                const SizedBox(height: 32),

                SizedBox(
                  width: double.infinity,
                  height: 50,
                  child: TextButton(
                    key: const Key('btnCariDospem'),
                    onPressed: () {
                      Navigator.pushNamed(context, '/daftar_dosen');
                    },
                    style: TextButton.styleFrom(
                      backgroundColor: const Color(0xFF0F47AD),
                      shape: RoundedRectangleBorder(
...
