...
          child: Padding(
            padding: const EdgeInsets.symmetric(horizontal: 24),
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                // Logo
                Image.asset(key: const Key('imgLogo'), 'assets/img/digita_logo.png', height: 300),
                const SizedBox(height: 24),
                // Text
                Text(
                  'Solusi simpel dan praktis untuk bimbingan tugas akhir yang lebih teratur dan efisien!',
                  textAlign: TextAlign.center,
                  softWrap: true,
...
                const SizedBox(height: 48),
                // Button Masuk
                SizedBox(
                  width: double.infinity,
                  height: 50,
                  child: TextButton(
                    key: const Key('btnLogin'),
                    onPressed: () {
                      Navigator.pushNamed(context, '/login');
                    },
                    style: TextButton.styleFrom(
                      backgroundColor: const Color(0xFF0F47AD),
                      shape: RoundedRectangleBorder(
...
