...
          const SizedBox(height: 32),
          // LANJUT Button
          SizedBox(
            width: double.infinity,
            height: 50,
            child: ElevatedButton(
              key: const Key('btnRoleSelect'),
              style: ElevatedButton.styleFrom(
                backgroundColor: const Color(0xFF0F47AD),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(32),
                ),
                disabledBackgroundColor: const Color(0xFFEFEFEF),
...
