...
          child: Row(
            children: [
              if (isLoading)
                Skeleton.shade(child: CircleAvatar(radius: 28))
              else
                CircleAvatar(
                  key: const Key('imgAvatarMahasiswa'),
                  radius: 28,
                  child: Image.asset('assets/img/mhs_pria.png'),
                ),
              const SizedBox(width: 10),
              Expanded(
                child: Column(
...
